--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,18 @@ social:
   #tripadvisor:
   #amazon:
 
+paginate: 5
+paginate_path: blog/page:num/
+permalink: pretty
+
+collections:
+  posts:
+    permalink: /blog/:year/:month/:day/:title/
+
 # Build settings
 markdown: kramdown
 #sass:
 #  style: compressed
+
+plugins:
+  - jekyll-paginate
