Revise blog pagination path format.  Fix menu so that it will only include the first page of the blog (this will break if the pagination_path variable is changed significantly)

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ social:
   #amazon:
 
 paginate: 5
-paginate_path: blog/page:num/
+paginate_path: blog/page/:num/
 permalink: pretty
 
 collections:
