Switch to SEO plugin for header fields.  Migrate to native relative_url and absolute_url filters.  Correct some general linking issues.  Add support for atom feed, make atom and rss feed size a site config variable.

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ social:
   #tripadvisor:
   #amazon:
 
+feed_count: 10
 paginate: 5
 paginate_path: blog/page/:num/
 permalink: pretty
@@ -68,3 +69,4 @@ markdown: kramdown
 
 plugins:
   - jekyll-paginate
+  - jekyll-seo-tag
