--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,9 @@ social:
   #tripadvisor:
   #amazon:
 
+page_header_image: /images/banner.jpg
+landing_header_image: /images/banner.jpg
+
 feed_count: 10
 paginate: 5
 paginate_path: blog/page/:num/
